<resources>
    <string name="app_name">AutolibDZ</string>
    <string name="title_activity_home">Accueil</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Parametres</string>

    <string name="menu_home">Accueil</string>
    <string name="menu_history">Mes réservations</string>
    <string name="menu_reclamation">Réclamation</string>
    <string name="menu_assistance">Assistance</string>
    <string name="menu_balance">Balance</string>
    <string name="menu_transactions">Mes transactions</string>
    <string name="menu_profil">Mon profil</string>

    <string name="set_location">Choisissez location</string>
    <string name="set_start_location">Choisir votre borne de départ</string>
    <string name="set_dest_location">Choisir votre borne d\'arrivée</string>

    <string name="from_current_location_empty">Borne départ</string>
    <string name="to_location_empty">Borne destination</string>
    <string name="drag_info">Plus d\'infos</string>
    <string name="api_key" templateMergeStrategy="preserve" translatable="false">AIzaSyA9DGuUN735F-CarxUPOfblxOMC5m3K8p8</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_confirmer">Confirmer</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Strings used for LOG IN interface -->
    <string name="passReset"><u>Mot de passe oublié ?</u></string>
    <string name="createAccount">Pas de compte ? <u><b>Inscrivez-vous</b></u></string>
    <string name="rememberMe">Se souvenir de moi</string>
    <!-- END OF Strings used for LOG IN interface -->
    <string name="changerMdp"><u>Changer mon mot de passe</u></string>
    <!-- Strings used for FRAGMENTS-->
    <string name="textViewSplashOne">Réservez et localisez un véhicule</string>
    <string name="textViewSplashTwo">Déverouillez-le</string>
    <string name="textViewSplashThree">Et bonne route!</string>
    <string name="passer"><u>Passer</u></string>
    <!-- END OF Strings used for FRAGMENTS-->

    <!-- Strings used for profil interface-->
    <string name="name">Nom</string>
    <string name="lastName">Prénom</string>
    <string name="birthday">Date de naissance</string>
    <string name="email">E-mail</string>
    <string name="phoneNumber">Numéro de téléphone</string>
    <string name="save">Sauvgarder</string>
    <string name="logOut">Se déconnecter</string>
    <string name="pwd">    Mot de passe</string>

    <!-- END OF Strings used for profil interface-->

    <!-- FOR KEY SHAREDPREF-->
    <string-array name="reclamation_array">
        <item>bug</item>
        <item>service</item>
        <item>autre</item>
    </string-array>


    <string name="PREFERENCE_FILE_KEY">com.sil1.autolibdz_rental</string>
    <string name="reservation_tout">Tout</string>
    <string name="codePin_tip">Utiliser le code PIN pour déverouiller l"ordinateur de bord qui se trouve à l'intérieur du véhicule.</string>
    <!-- END OF SHAREDPREF-->

    <!--    trajet-->
    <string name="thankYouTrajet">Merci d\'avoir pris \nla route avec \nAutoLibDZ!</string>
    <string name="detailsTrajet">Voici les détails de votre trajet :</string>

    <!--Bank card fragment-->
    <string name="effectuerPaiementFragTitle">Effectuer un paiement</string>
    <string name="emailExample">email@example.com</string>
    <string name="cardNumber">Numéro de la carte</string>
    <string name="expirationDate">Date d\'expiration</string>
    <string name="creditCardNumberExample">3700 0000 0000 002</string>
    <string name="expirationDateExample">2022/05</string>
    <string name="ccv">CCV</string>
    <string name="ccvExample">123</string>
    <string name="checkout">Payer</string>
    <string name="annuler">Annuler</string>
    <string name="procedePayment">Procéder au paiement</string>
    <string name="procedePaymentText">Notez que l\'opération de paiement est irréversible. Etes-vous sûrs de vouloir continuer?</string>
    <string name="useSavedCreditCard">Utilisez votre carte</string>
    <string name="useSavedCreditCardText">Souhaitez-vous utiliser la carte de crédit sauvegardée afin d\'effectuer le paiement?</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>

    <!--paying from abonnement fragment-->
    <string name="montantRestant">Montant restant</string>
    <string name="montantAPayer">Montant à payer</string>
    <string name="montantTotal">Total</string>
    <string name="abonnement">Abonnement</string>
    <string name="invalidCard">Carte non valide</string>
    <string name="waitPlease">Patientez s\'il vous plait</string>
    <string name="paymentOngoing">Paiement en cours</string>

    <!--Facturation-->
    <string name="facture">Facture</string>
    <string name="type">Type</string>
    <string name="date">Date</string>
    <string name="paymentMethod">Méthode</string>
    <string name="bankCard">Carte bancaire</string>
    <string name="sendByEmail">Envoyez par email</string>
    <string name="skip">Terminer</string>


    <!--    paiement end-->
    <string name="paymentDone">Paiement effectué</string>
    <string name="thankYouPayment">Merci d\'avoir utilisé AutolibDz !</string>
    <string name="done">Terminé</string>

    <!--    transaction-->
    <string name="transactionType">Nature de la réservation</string>
    <string name="history">Historique</string>
    <string name="transactions">Transactions</string>

    <string name="signalODB">Fin de trajet</string>
    <string name="signalODBDetail">Veuillez signalez la fin de trajet sur l\'ordinateur de bord de votre voiture d\'abord.</string>
    <!--maps display fragment-->
    <string name="compteValidationTitle">Opération impossible</string>
    <string name="compteValidationMsg">Votre compte n\'a pas encore été validé</string>
    <string name="compris">J\'ai compris</string>
</resources>
