<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profil"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/menu_profil" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_baseline_history_24"
            android:title="@string/menu_history" />

        <item
            android:id="@+id/nav_transaction"
            android:icon="@drawable/ic_baseline_payment_24"
            android:title="@string/menu_transactions" />
        <item
            android:id="@+id/nav_reclamation"
            android:icon="@drawable/ic_warning"
            android:title="@string/menu_reclamation" />
        <item
            android:id="@+id/nav_assistance"
            android:icon="@drawable/ic_face_agent"
            android:title="@string/menu_assistance" />

    </group>
</menu>