<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.sil1.autolibdz_rental.ui.view.fragment.map_display.MapDisplayFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/map_display_fragment" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.sil1.autolibdz_rental.ui.view.fragment.ExampleFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_example" />

    <fragment
        android:id="@+id/nav_reclamation"
        android:name="com.sil1.autolibdz_rental.ui.view.fragment.ExampleFragment"
        android:label="@string/menu_reclamation"
        tools:layout="@layout/fragment_example" />
    <fragment
        android:id="@+id/nav_assistance"
        android:name="com.sil1.autolibdz_rental.ui.view.fragment.ExampleFragment"
        android:label="@string/menu_assistance"
        tools:layout="@layout/fragment_example" />
    <fragment
        android:id="@+id/nav_balance"
        android:name="com.sil1.autolibdz_rental.ui.view.fragment.ExampleFragment"
        android:label="@string/menu_balance"
        tools:layout="@layout/fragment_example" />



</navigation>