<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/stripeCardLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/palette_grey_200"
    tools:context=".ui.view.fragment.stripe_card.StripeCardFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:theme="@style/AppTheme.Toolbar">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gothambook"
                android:paddingStart="24dp"
                android:text="@string/effectuerPaiementFragTitle"
                android:textColor="@color/black"
                android:textSize="@dimen/appbar_title"
                android:lineHeight="24sp"
                />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/formLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        >

        <TextView
            android:id="@+id/emailInputTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/input_title_margin_left"
            android:layout_marginTop="@dimen/input_title_margin_top"
            android:layout_marginBottom="@dimen/input_title_margin_bottom"
            android:fontFamily="@font/gothammedium"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="@dimen/input_title" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/view_margin_horizontal"
            android:background="@drawable/ic_input_white"
            android:drawableLeft="@drawable/ic_user_yellow"
            android:drawablePadding="12dp"
            android:elevation="@dimen/input_elevation"
            android:fontFamily="@font/gothambook"
            android:hint="@string/emailExample"
            android:inputType="textEmailAddress"
            android:paddingVertical="@dimen/input_padding_vertical"
            android:paddingStart="8dp"
            android:textSize="@dimen/input_text"
            android:lineHeight="24sp"
            />

        <TextView
            android:id="@+id/cardNumberInputTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/input_title_margin_left"
            android:fontFamily="@font/gothammedium"
            android:text="@string/cardNumber"
            android:textColor="@color/black"
            android:textSize="@dimen/input_title"
            android:layout_marginTop="@dimen/input_title_margin_top"
            android:layout_marginBottom="@dimen/input_title_margin_bottom"/>

        <mostafa.ma.saleh.gmail.com.editcredit.EditCredit
            android:id="@+id/cardNumberInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:drawableGravity="start"
            app:separator="spaces"
            app:disabledCards="none"
            android:drawablePadding="7dp"
            android:layout_marginHorizontal="@dimen/view_margin_horizontal"
            android:background="@drawable/ic_input_white"
            android:fontFamily="@font/gothambook"
            android:hint="@string/creditCardNumberExample"
            android:inputType="textEmailAddress"
            android:paddingVertical="@dimen/input_padding_vertical"
            android:paddingStart="8dp"
            android:textSize="@dimen/input_text"
            android:elevation="@dimen/input_elevation"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/expirationDateInputTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/input_title_margin_left"
                    android:fontFamily="@font/gothammedium"
                    android:text="@string/expirationDate"
                    android:textColor="@color/black"
                    android:textSize="@dimen/input_title"
                    android:layout_marginTop="@dimen/input_title_margin_top"
                    android:layout_marginBottom="@dimen/input_title_margin_bottom"/>

                <TextView
                    android:id="@+id/expirationDateInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/view_margin_horizontal"
                    android:background="@drawable/ic_input_white"
                    android:drawableLeft="@drawable/ic_calendar_yellow"
                    android:drawablePadding="12dp"
                    android:fontFamily="@font/gothambook"
                    android:text="@string/expirationDateExample"
                    android:paddingVertical="@dimen/input_padding_vertical"
                    android:paddingStart="8dp"
                    android:textSize="@dimen/input_text"
                    android:elevation="@dimen/input_elevation"
                    android:lineHeight="24sp"/>
                <!--space-->
                <View
                    android:layout_width="1dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="4dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ccvInputTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/input_title_margin_left"
                    android:fontFamily="@font/gothammedium"
                    android:text="@string/ccv"
                    android:textColor="@color/black"
                    android:textSize="@dimen/input_title"
                    android:layout_marginTop="@dimen/input_title_margin_top"
                    android:layout_marginBottom="@dimen/input_title_margin_bottom"/>

                <EditText
                    android:id="@+id/ccvInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/view_margin_horizontal"
                    android:background="@drawable/ic_input_white"
                    android:drawableLeft="@drawable/ic_lock_yellow"
                    android:drawablePadding="12dp"
                    android:fontFamily="@font/gothambook"
                    android:hint="@string/ccvExample"
                    android:inputType="numberDecimal"
                    android:paddingVertical="@dimen/input_padding_vertical"
                    android:paddingStart="8dp"
                    android:textSize="@dimen/input_text"
                    android:maxLength="3"
                    android:elevation="@dimen/input_elevation"
                    android:lineHeight="24sp"
                    />
<!--                space-->
                <View
                    android:layout_width="1dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="4dp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/payButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/btn_margin_horizontal"
        android:layout_marginTop="32dp"
        android:background="@drawable/ic_btn_rounded_corners"
        android:stateListAnimator="@null"
        android:text="@string/checkout"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/formLayout"
        app:layout_constraintVertical_bias="0.17" />
</androidx.constraintlayout.widget.ConstraintLayout>

