<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.activity.ProfilLocataireActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:background="@drawable/ic_rectangle_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="Mon profil"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/ic_circle_yellow"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout3"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout3"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout3" />

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:shapeAppearance="@style/ShapeAppearance.App.CircleImageView"
        app:srcCompat="@drawable/yacine"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="5dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/birthday"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/lastNameInput" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lastName"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/nameInput" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/birthDay" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:text="@string/phoneNumber"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/emailInput" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"

        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:background="@drawable/ic_input_background"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:text="yacine"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/lastNameInput"
        android:layout_width="0dp"
        android:layout_height="40dp"

        android:background="@drawable/ic_input_background"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:text="yacine"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="@+id/nameInput"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nameInput"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="0dp"
        android:layout_height="40dp"

        android:background="@drawable/ic_input_background"
        android:drawableRight="@drawable/ic_mail_black"

        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="@+id/nameInput"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nameInput"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/phoneNumberInput"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_input_background"
        android:drawableRight="@drawable/ic_phone"
        android:ems="10"
        android:inputType="phone"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="@+id/nameInput"
        app:layout_constraintStart_toStartOf="@+id/nameInput"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:text="@string/save"
        android:textStyle="bold"
        app:backgroundTint="#FFCB00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberInput" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:text="@string/logOut"
        android:textStyle="bold"
        app:backgroundTint="#F5365C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <View
        android:id="@+id/birthDay"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_input_background"
        app:layout_constraintEnd_toEndOf="@+id/nameInput"
        app:layout_constraintStart_toStartOf="@+id/nameInput"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/birthDay"
        app:layout_constraintEnd_toEndOf="@+id/birthDay"
        app:layout_constraintTop_toTopOf="@+id/birthDay"
        app:srcCompat="@drawable/ic_calendar" />

    <TextView
        android:id="@+id/birth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/birthDay"
        app:layout_constraintStart_toStartOf="@+id/birthDay"
        app:layout_constraintTop_toTopOf="@+id/birthDay" />
</androidx.constraintlayout.widget.ConstraintLayout>